test/cli/test-validating-policy/empty-and-comment-only-resources/comments-only.yaml
---
# Source: helm-chart/templates/disabled.yaml
---
